--- a/src/style.css
+++ b/src/style.css
@@ -158,6 +158,7 @@ div ~ p {
 
 /* Sie wissen, was CSS-Grid ist */
 /* Sie kennen die CSS-Eigenschaften von CSS-Grid für Grid Container und Grid Items. */
+/* https://cssgrid-generator.netlify.app/ */
 .grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
